--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
-    "@vueuse/nuxt": "^10.9.0",
+    "@vueuse/core": "^11.2.0",
+    "@vueuse/nuxt": "^10.11.1",
     "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
     "postcss": "^8.4.38",
